Cms registration. Localizations.

--- a/src/Kentico.XbyK.Contacts.Importer/Kentico.XbyK.Contacts.Importer.csproj
+++ b/src/Kentico.XbyK.Contacts.Importer/Kentico.XbyK.Contacts.Importer.csproj
@@ -10,7 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Admin\" />
+      <EmbeddedResource Include="Resources\ContactsImporterResources.resx" />
     </ItemGroup>
 
 </Project>
