--- a/src/Kentico.XbyK.Contacts.Importer/Kentico.XbyK.Contacts.Importer.csproj
+++ b/src/Kentico.XbyK.Contacts.Importer/Kentico.XbyK.Contacts.Importer.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CsvHelper" Version="30.0.1" />
       <PackageReference Include="Kentico.Xperience.Admin" Version="26.2.2" />
       <PackageReference Include="Kentico.Xperience.WebApp" Version="26.2.2" />
     </ItemGroup>
