--- a/src/Kentico.XbyK.Contacts.Importer/Client/package.json
+++ b/src/Kentico.XbyK.Contacts.Importer/Client/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "webpack serve --mode development",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development"
   },
   "dependencies": {
     "@kentico/xperience-admin-base": "26.3.1",
