--- a/src/Kentico.XbyK.Contacts.Importer/Client/package.json
+++ b/src/Kentico.XbyK.Contacts.Importer/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "community-web-admin",
+  "name": "kentico-xperience-contacts-import-web-admin",
   "version": "1.0.0",
   "description": "Kentico Xperience Contacts Import project.",
   "private": true,
@@ -8,25 +8,28 @@
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development"
   },
+  "engines": {
+    "node": ">=18.12.0 <=19"
+  },
   "dependencies": {
     "@kentico/xperience-admin-base": "26.3.1",
     "@kentico/xperience-admin-components": "26.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@kentico/xperience-webpack-config": "26.3.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "babel-loader": "^9.1.2",
-    "webpack": "5.76.2",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "@babel/core": "7.22.9",
+    "@babel/plugin-transform-runtime": "7.22.9",
+    "@babel/preset-env": "7.22.9",
+    "@babel/preset-react": "7.22.5",
+    "@babel/preset-typescript": "7.22.5",
+    "@kentico/xperience-webpack-config": "26.3.1",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "babel-loader": "9.1.3",
+    "webpack": "5.88.2",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1"
   },
   "overrides": {
     "react": "$react",
