--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,10 @@
     {
       "type": "npm",
       "script": "install",
-      "path": "src/Kentico.XbyK.Contacts.Importer/Client",
+      "path": "src/Kentico.Xperience.Contacts.Importer/Client",
       "group": "clean",
       "problemMatcher": [],
-      "label": "npm: install - src/Kentico.XbyK.Contacts.Importer/Client",
+      "label": "npm: install - src/Kentico.Xperience.Contacts.Importer/Client",
       "detail": "install dependencies from package"
     },
     {
@@ -27,27 +27,27 @@
     {
       "type": "npm",
       "script": "build",
-      "path": "src/Kentico.XbyK.Contacts.Importer/Client",
+      "path": "src/Kentico.Xperience.Contacts.Importer/Client",
       "group": "build",
       "problemMatcher": [],
-      "label": "npm: build - src/Kentico.XbyK.Contacts.Importer/Client",
+      "label": "npm: build - src/Kentico.Xperience.Contacts.Importer/Client",
       "detail": "webpack --mode=production"
     },
     {
       "type": "npm",
       "script": "build:dev",
-      "path": "src/Kentico.XbyK.Contacts.Importer/Client",
+      "path": "src/Kentico.Xperience.Contacts.Importer/Client",
       "group": "build",
       "problemMatcher": [],
-      "label": "npm: build:dev - src/Kentico.XbyK.Contacts.Importer/Client",
+      "label": "npm: build:dev - src/Kentico.Xperience.Contacts.Importer/Client",
       "detail": "webpack --mode=development"
     },
     {
       "type": "npm",
       "script": "start",
-      "path": "src/Kentico.XbyK.Contacts.Importer/Client",
+      "path": "src/Kentico.Xperience.Contacts.Importer/Client",
       "problemMatcher": [],
-      "label": "npm: start - src/Kentico.XbyK.Contacts.Importer/Client",
+      "label": "npm: start - src/Kentico.Xperience.Contacts.Importer/Client",
       "detail": "webpack serve --mode development"
     }
   ]
