refactor(Importer): admin module/pages

--- a/src/Kentico.Xperience.Contacts.Importer/Kentico.Xperience.Contacts.Importer.csproj
+++ b/src/Kentico.Xperience.Contacts.Importer/Kentico.Xperience.Contacts.Importer.csproj
@@ -19,6 +19,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<AssemblyAttribute Include="CMS.AssemblyDiscoverableAttribute">
+		</AssemblyAttribute>
 		<AdminClientPath Include="Client\dist\**">
 			<ProjectName>web-admin</ProjectName>
 		</AdminClientPath>
