build(devops): fix project path

--- a/.azuredevops/pipelines/build-and-release.yaml
+++ b/.azuredevops/pipelines/build-and-release.yaml
@@ -51,7 +51,7 @@ stages:
             inputs:
               targetType: inline
               script: |
-                $fileContent = Get-Content -Path './src/${{ variables.ProjectFolder }}/Client/package.json' -Raw
+                $fileContent = Get-Content -Path './${{ variables.ProjectFolder }}/Client/package.json' -Raw
                 $jsonObject = ConvertFrom-Json -InputObject $fileContent
 
                 # Get the value of engines.node
