build(devops): pipeline typo

--- a/.azuredevops/pipelines/build-and-release.yaml
+++ b/.azuredevops/pipelines/build-and-release.yaml
@@ -56,7 +56,8 @@ stages:
 
                 # Get the value of engines.node
                 $enginesNode = $jsonObject.engines.node
-                Write-Host "##vso[task.setvariable variable=PACKAGE_JSON_NODE_VERSION;isOutput=true]"$enginesNode
+                Write-Host "Required Node version $enginesNode"
+                Write-Host "##vso[task.setvariable variable=PACKAGE_JSON_NODE_VERSION;isOutput=true]$enginesNode"
 
           - task: UseNode@1
             displayName: "Install Node.js from package.json version"
