--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
       - "**.props"
       - "**.targets"
       - "**.sln"
+      - "**/Client/**/*.json"
   pull_request:
     branches: [main]
     paths:
@@ -21,6 +22,7 @@ on:
       - "**.props"
       - "**.targets"
       - "**.sln"
+      - "**/Client/**/*.json"
 
 jobs:
   build:
