--- a/src/Kentico.Xperience.Contacts.Importer/Client/tsconfig.json
+++ b/src/Kentico.Xperience.Contacts.Importer/Client/tsconfig.json
@@ -1,4 +1,4 @@
-// Provides recommended TypeScript configuration 
+// Provides recommended TypeScript configuration
 {
   "compilerOptions": {
     "baseUrl": ".",
@@ -14,5 +14,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "include": ["./src/**/*"]
 }
