wip contacts fix

--- a/examples/DancingGoat/appsettings.json
+++ b/examples/DancingGoat/appsettings.json
@@ -16,5 +16,13 @@
 	"ConnectionStrings": {
 		"CMSConnectionString": ""
 	},
-	"CMSHashStringSalt": "88e46b3a-fe6e-472c-b265-e0bc8419c68e"
+  "CMSHashStringSalt": "88e46b3a-fe6e-472c-b265-e0bc8419c68e",
+  "CMSAdminClientModuleSettings": {
+    "kentico-xperience-integrations-contacts-importer": {
+      // In Proxy mode, client scripts are built separately and requests for them are proxied to the webpack server
+      "Mode": "Proxy",
+      // The port number needs to match the port set for the webpack server in webpack.config.js
+      "Port": 3015
+    }
+  }
 }
