--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,8 @@ segments_2i
 **/nuget-local/*.*pkg
 
 /examples/DancingGoat/Properties/PublishProfiles
+
+# MCP server definitions
+mcp.json
+claude_desktop_config.json
+mcp_config.json
