--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,6 +9,7 @@
     <PackageVersion Include="Kentico.Xperience.Admin" Version="31.0.1" />
     <PackageVersion Include="kentico.xperience.azurestorage" Version="31.0.1" />
     <PackageVersion Include="kentico.xperience.imageprocessing" Version="31.0.1" />
+    <PackageVersion Include="kentico.xperience.mjml" Version="31.0.1" />
     <PackageVersion Include="kentico.xperience.webapp" Version="31.0.1" />
     <PackageVersion Include="CsvHelper" Version="33.0.1" />
     <PackageVersion Include="Kentico.Xperience.ContactsImporter" Version="" Condition="'$(LOCAL_NUGET)' == 'true'" />
