--- a/src/Kentico.Xperience.Contacts.Importer/Kentico.Xperience.Contacts.Importer.csproj
+++ b/src/Kentico.Xperience.Contacts.Importer/Kentico.Xperience.Contacts.Importer.csproj
@@ -43,6 +43,20 @@
 			</AdminClientPath>
 		</ItemGroup>
 	</Target>
+	<ItemGroup>
+	  <EmbeddedResource Include="Resources\ContactImporterResources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>ContactImporterResources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Update="Resources\ContactImporterResources.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>ContactImporterResources.resx</DependentUpon>
+		</Compile>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="CsvHelper" />
